# canonical-indico-themes

./: .gitignore  .stylelintrc.json  MANIFEST.in  README.md  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  webpack-build-config.json  webpack-bundles.json
.github/workflows/: checkin.yml
indico_plugin_themes_canonical.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
indico_themes_canonical/: __init__.py  canonical_themes.py  plugin.py  themes-canonical.yaml
indico_themes_canonical/static/css/: ubuntu_summit.css
indico_themes_canonical/static/css/_default/: _buttons.css  _forms.css  _notifications.css  call-for-abstracts.css  contribution-list.css  header.css  index.css  overview.css  participant-list.css  registration.css  scientific-program.css  side-navigation.css  surveys.css  timetable.css  top-navigation.css
indico_themes_canonical/static/css/aqua/: index.css
indico_themes_canonical/static/css/canonical/: index.css
indico_themes_canonical/static/css/dark/: index.css
indico_themes_canonical/static/css/grad/: index.css
indico_themes_canonical/static/css/k8s/: index.css
indico_themes_canonical/static/css/orange/: index.css
indico_themes_canonical/static/css/snapcraft/: index.css
indico_themes_canonical/static/css/ubuntu-summit/: _buttons.css  _forms.css  _icons.css  _notifications.css  call-for-abstracts.css  call-for-proposals.css  contribution-list.css  header.css  index.css  overview.css  registration.css  scientific-program.css  side-navigation.css  surveys.css  timetable.css
indico_themes_canonical/static/js/: default.js  ubuntu_summit.js
indico_themes_canonical/themes/: ubuntu-summit.scss
themes_us/: MANIFEST.in  setup.cfg
themes_us/indico_themes_us/: plugin.py  themes-us.yaml
themes_us/indico_themes_us/themes/: us.scss
