[metadata]
name = indico-plugin-themes-canonical
version = 1.2.1
url = https://github.com/canonical/canonical-indico-themes
license = Apache 2.0
author = Peter French
author_email = peter.french@canonical.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: Apache 2.0
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.0

[options.entry_points]
indico.plugins =
    themes_canonical = indico_themes_canonical.plugin:CanonicalThemesPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
