[metadata]
name = indico-plugin-themes-canonical
version = 2.0.2
url = https://github.com/canonical/canonical-indico-themes
license = Apache 2.0
author = Peter French
author_email = peter.french@canonical.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: Apache 2.0
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.13

[options.extras_require]
dev = tox==4.14.2

[options.entry_points]
indico.plugins =
    themes_canonical = indico_themes_canonical.plugin:CanonicalThemesPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[tox:tox]
envlist = py3

[isort]
profile = black

[testenv]
deps =
  black
  isort
  flake8
commands =
  black indico_themes_canonical
  isort indico_themes_canonical
  flake8 indico_themes_canonical
