[metadata]
name = indico-plugin-themes-us
version = 1.0
url = https://github.com/indico/indico-plugins-cern
license = Apache 2.0
author = Peter French
author_email = peter.french@canonical.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: Apache 2.0
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.0

[options.entry_points]
indico.plugins =
    themes_us = indico_themes_us.plugin:USThemesPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
